create the basic structures for both portfolio and services page + refactoriing

--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Makeup Artist in Melaka area</title>
   <link rel="stylesheet" href="../style.css">
-  <script src="app.js" defer></script>
+
 </head>
 
 <body>
@@ -17,18 +17,17 @@
   <header class="main-navigation bg-nav ">
     <div class="main-navbar container flex flex-sb flex-center">
       <div>
-        <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
       </div>
       <nav>
         <ul role="list" class="flex tab-list uppercase fs-300">
-          <a href="#">
+          <a href="./services_page.html">
             <li>services</li>
           </a>
-          <a href="#">
+          <a href="./portfolio_page.html">
             <li>portfolio</li>
-          </a>
-          <a href="#">
-            <li>about</li>
           </a>
         </ul>
       </nav>
@@ -36,7 +35,9 @@
 
     <div class="secondary-navbar container hidden">
       <div>
-        <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
       </div>
       <div class="nav-icon">
         <img src="../images/svg/burger-menu-svgrepo-com.svg" alt="burger-icon" class="burger-icon pointer">
@@ -203,7 +204,7 @@
     </section>
 
     <!-- faq -->
-    <section class="section-home-faq container flex" style="--gap: 7.5rem;">
+    <section class="section-home-faq container flex" style="--gap: 1rem;">
       <div class="home-faq_left">
         <h2 class="uppercase fs-700 ff-serif margin-bottom" style="--bottom-space: 0.5em;">faq</h2>
         <p class="fs-200">
@@ -212,17 +213,15 @@
       </div>
       <div class="faq_column full-width">
         <div class="faq_list-wrapper">
-          <div class="faq_item fs-300">
-            <div class="faq_question-wrapper margin-bottom flex unflex">
-              <div class="faq_question-number">01/</div>
-              <div class="flex">
-                <div class="faq_question uppercase">
-                  <div>How I can get in touch with you?</div>
-                </div>
-                <div class="faq_icon">
-                  <img src="../images/svg/plus.svg" alt="expanded">
-                </div>
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
               </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
             </div>
             <div class="faq_answer">
               <div class="faq_answer-wrapper content">
@@ -231,17 +230,15 @@
             </div>
             <div class="line margin" style="opacity: 0.5; --height: 1px; --margin-space: 1.5em;"></div>
           </div>
-          <div class="faq_item fs-300">
-            <div class="faq_question-wrapper margin-bottom flex unflex">
-              <div class="faq_question-number">01/</div>
-              <div class="flex">
-                <div class="faq_question uppercase">
-                  <div>How I can get in touch with you?</div>
-                </div>
-                <div class="faq_icon">
-                  <img src="../images/svg/plus.svg" alt="expanded">
-                </div>
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
               </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
             </div>
             <div class="faq_answer">
               <div class="faq_answer-wrapper content">
@@ -250,17 +247,15 @@
             </div>
             <div class="line margin" style="opacity: 0.5; --height: 1px; --margin-space: 1.5em;"></div>
           </div>
-          <div class="faq_item fs-300">
-            <div class="faq_question-wrapper margin-bottom flex unflex">
-              <div class="faq_question-number">01/</div>
-              <div class="flex">
-                <div class="faq_question uppercase">
-                  <div>How I can get in touch with you?</div>
-                </div>
-                <div class="faq_icon">
-                  <img src="../images/svg/plus.svg" alt="expanded">
-                </div>
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
               </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
             </div>
             <div class="faq_answer">
               <div class="faq_answer-wrapper content">
