--- a/html/portfolio_page.html
+++ b/html/portfolio_page.html
@@ -5,17 +5,200 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>See Jessie's makeup and hairstyles for wedding</title>
+  <title>Professional Makeup Artist in Melaka area</title>
   <link rel="stylesheet" href="../style.css">
-  <script src="app.js" defer></script>
+
 </head>
 
 <body>
-  <!-- start writing html -->
-  <!-- mobile or desktop first -->
   <!-- style: mobile first -->
   <!-- writing html: desktop first(desktop html has the most complexity) -->
   <!-- used what we already have in the custom properties and utility classes -->
+  <header class="main-navigation bg-nav ">
+    <div class="main-navbar container flex flex-sb flex-center">
+      <div>
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
+      </div>
+      <nav>
+        <ul role="list" class="flex tab-list uppercase fs-300">
+          <a href="./services_page.html">
+            <li>services</li>
+          </a>
+          <a href="./portfolio_page.html">
+            <li>portfolio</li>
+          </a>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="secondary-navbar container hidden">
+      <div>
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
+      </div>
+      <div class="nav-icon">
+        <img src="../images/svg/burger-menu-svgrepo-com.svg" alt="burger-icon" class="burger-icon pointer">
+      </div>
+    </div>
+
+  </header>
+
+
+  <main class="main-wrapper flow" style="--flow-space: 3rem;">
+    <!-- header 1 -->
+    <section class="stacked portfolio-header portfolio-header__bg">
+      <h1 class="portfolio-header__title capitalize ff-serif text-white">
+        portfolio
+      </h1>
+    </section>
+
+    <!-- gallery -->
+    <section class="portfolio-gallery container">
+      <ul role="list" class="flex tab-list uppercase fs-300">
+        <li class="fs-400 selected">All</li>
+        <li class="fs-400">Wedding</li>
+        <li class="fs-400">Lifestyle</li>
+      </ul>
+
+      <div class="portfolio-gallery__grid">
+        <div class="content flow">
+          <img src="https://picsum.photos/200/400" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+        <div class="content flow">
+          <img src="https://picsum.photos/200/300" alt="photo">
+        </div>
+      </div>
+
+    </section>
+
+    <!-- testimonial -->
+    <section class="section-home-testimonial container flex">
+      <div class="home-testimonial_left testimonial-quote">
+        <img class="home-testimonial_left-image" src="../images/svg/open-quote.svg" alt="quote">
+      </div>
+      <div class="home-testimonial_right">
+        <div class="line margin" style="--margin-space: 0.75rem;"></div>
+        <h2 class="home-testimonial_right-title ff-serif margin-bottom"
+          style="font-size: clamp(2.5rem, 6vw, var(--fs-700));">My hair looked fabulous!</h2>
+        <div class="home-testimonial_right-bottom-content flex " style="--gap: 4rem;">
+          <p class="comment">
+            I wanted to write a long thank you review, but I can’t describe in words how thankful I am to Eva for my
+            wedding look! I felt so comfortable with you! Thank you for making me sooo beautiful and
+            elegant! Thank you for supporting and comforting me during the whole process! You’re the best! Can’t wait to
+            schedule our makeup class!
+          </p>
+          <p class="name">Galina</p>
+        </div>
+        <div class="arrows flex flex-start">
+          <div class="left-arrow pointer">
+            <img src="../images/svg/left-arrow.svg" alt="left">
+          </div>
+          <div class="right-arrow pointer">
+            <img src="../images/svg/right-arrow.svg" alt="right">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- media playing here -->
+    
+
+    <!-- Instagram -->
+    <section class="section-home-instagram">
+      <div class="container flex flex-center margin-bottom wrap" style="--bottom-space: 2rem;">
+        <h2 class="ff-serif" style="margin-right: 2rem; font-size: clamp(2.5rem, 7vw, var(--fs-700));">
+          Follow me on Instagram
+        </h2>
+        <a href="#" class="hide">
+          <button class="button pointer fs-200 letter-spacing-3">@Jessie</button>
+        </a>
+      </div>
+
+      <div class="grid" style="--gap: 1.5rem;">
+        <div class="grid-item">
+          <div class="img-container pointer">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#" class="ar-1">
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="img-container pointer">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#" class="ar-1">
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="img-container pointer">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#" class="ar-1">
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="img-container pointer">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#" class="ar-1">
+          </div>
+        </div>
+      </div>
+      <div class="container hidden unhidden margin-top" style="--top-space: 1.5rem;">
+        <a href="#">
+          <button class="button pointer uppercase fs-200">See all services</button>
+        </a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="img-container">
+        <img src="../images/logo/jessie-logo.svg" alt="jessie-logo">
+      </div>
+      <div class="line margin" style="--height: 1px;"></div>
+      <h3 class="fs-500">Contact Me</h3>
+      <p>I'll get back to you within 24 hours.</p>
+      <div class="flex social-medias" style="--gap: 1.5rem; padding-block: 1rem;">
+        <div class="flex-item">
+          <img id="whatsapp" src="../images/svg/icons8-whatsapp.svg" alt="whatsapp">
+        </div>
+        <div class="flex-item">
+          <img id="messenger" src="../images/svg/icons8-facebook-messenger.svg" alt="messenger">
+        </div>
+        <div class="flex-item">
+          <img id="instagram" src="../images/svg/icons8-instagram.svg" alt="instagram">
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
+
 </html>
