--- a/html/services_page.html
+++ b/html/services_page.html
@@ -5,17 +5,172 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Make up and hair services for wedding and photoshoots</title>
+  <title>Professional Makeup Artist in Melaka area</title>
   <link rel="stylesheet" href="../style.css">
-  <script src="app.js" defer></script>
+
 </head>
 
 <body>
-  <!-- start writing html -->
-  <!-- mobile or desktop first -->
   <!-- style: mobile first -->
   <!-- writing html: desktop first(desktop html has the most complexity) -->
   <!-- used what we already have in the custom properties and utility classes -->
+  <header class="main-navigation bg-nav ">
+    <div class="main-navbar container flex flex-sb flex-center">
+      <div>
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
+      </div>
+      <nav>
+        <ul role="list" class="flex tab-list uppercase fs-300">
+          <a href="./services_page.html">
+            <li>services</li>
+          </a>
+          <a href="./portfolio_page.html">
+            <li>portfolio</li>
+          </a>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="secondary-navbar container hidden">
+      <div>
+        <a href="./home.html">
+          <img src="../images/logo/jessie-logo.svg" alt="jessie logo" class="logo pointer">
+        </a>
+      </div>
+      <div class="nav-icon">
+        <img src="../images/svg/burger-menu-svgrepo-com.svg" alt="burger-icon" class="burger-icon pointer">
+      </div>
+    </div>
+
+  </header>
+
+
+  <main class="main-wrapper flow" style="--flow-space: 10rem;">
+    <!-- header 1 -->
+    <section class="stacked service-header service-header__bg">
+
+      <h1 class="service-header__title capitalize ff-serif text-white">
+        services
+      </h1>
+    </section>
+
+    <!-- testimonial -->
+    <section class="section-home-testimonial container flex">
+      <div class="home-testimonial_left testimonial-quote">
+        <img class="home-testimonial_left-image" src="../images/svg/open-quote.svg" alt="quote">
+      </div>
+      <div class="home-testimonial_right">
+        <div class="line margin" style="--margin-space: 0.75rem;"></div>
+        <h2 class="home-testimonial_right-title ff-serif margin-bottom"
+          style="font-size: clamp(2.5rem, 6vw, var(--fs-700));">My hair looked fabulous!</h2>
+        <div class="home-testimonial_right-bottom-content flex " style="--gap: 4rem;">
+          <p class="comment">
+            I wanted to write a long thank you review, but I can’t describe in words how thankful I am to Eva for my
+            wedding look! I felt so comfortable with you! Thank you for making me sooo beautiful and
+            elegant! Thank you for supporting and comforting me during the whole process! You’re the best! Can’t wait to
+            schedule our makeup class!
+          </p>
+          <p class="name">Galina</p>
+        </div>
+        <div class="arrows flex flex-start">
+          <div class="left-arrow pointer">
+            <img src="../images/svg/left-arrow.svg" alt="left">
+          </div>
+          <div class="right-arrow pointer">
+            <img src="../images/svg/right-arrow.svg" alt="right">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- faq -->
+    <section class="section-home-faq container flex" style="--gap: 1rem;">
+      <div class="home-faq_left">
+        <h2 class="uppercase fs-700 ff-serif margin-bottom" style="--bottom-space: 0.5em;">faq</h2>
+        <p class="fs-200">
+          Here are the most common questions I hear from my clients
+        </p>
+      </div>
+      <div class="faq_column full-width">
+        <div class="faq_list-wrapper">
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
+              </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
+            </div>
+            <div class="faq_answer">
+              <div class="faq_answer-wrapper content">
+                <p class="inside ">Please feel free to fill out the form at the bottom of the page</p>
+              </div>
+            </div>
+            <div class="line margin" style="opacity: 0.5; --height: 1px; --margin-space: 1.5em;"></div>
+          </div>
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
+              </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
+            </div>
+            <div class="faq_answer">
+              <div class="faq_answer-wrapper content">
+                <p class="inside ">Please feel free to fill out the form at the bottom of the page</p>
+              </div>
+            </div>
+            <div class="line margin" style="opacity: 0.5; --height: 1px; --margin-space: 1.5em;"></div>
+          </div>
+          <div class="faq_item">
+            <div class="faq_question-wrapper margin-bottom flex flex-center">
+              <div class="faq_question uppercase">
+                <p>How I can get in touch with you?</p>
+              </div>
+              <div class="faq_question-icon">
+                <img src="../images/svg/plus.svg" alt="plus-sign">
+              </div>
+
+            </div>
+            <div class="faq_answer">
+              <div class="faq_answer-wrapper content">
+                <p class="inside ">Please feel free to fill out the form at the bottom of the page</p>
+              </div>
+            </div>
+            <div class="line margin" style="opacity: 0.5; --height: 1px; --margin-space: 1.5em;"></div>
+          </div>
+        </div>
+      </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="img-container">
+        <img src="../images/logo/jessie-logo.svg" alt="jessie-logo">
+      </div>
+      <div class="line margin" style="--height: 1px;"></div>
+      <h3 class="fs-500">Contact Me</h3>
+      <p>I'll get back to you within 24 hours.</p>
+      <div class="flex social-medias" style="--gap: 1.5rem; padding-block: 1rem;">
+        <div class="flex-item">
+          <img id="whatsapp" src="../images/svg/icons8-whatsapp.svg" alt="whatsapp">
+        </div>
+        <div class="flex-item">
+          <img id="messenger" src="../images/svg/icons8-facebook-messenger.svg" alt="messenger">
+        </div>
+        <div class="flex-item">
+          <img id="instagram" src="../images/svg/icons8-instagram.svg" alt="instagram">
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
