adding service content

--- a/html/services_page.html
+++ b/html/services_page.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Makeup Artist in Melaka area</title>
+  <title>🌟Makeup and hair services for wedding and photoshoots</title>
   <link rel="stylesheet" href="../style.css">
+
 
 </head>
 
@@ -28,6 +29,9 @@
           </a>
           <a href="./portfolio_page.html">
             <li>portfolio</li>
+          </a>
+          <a href="#contact">
+            <li>contact</li>
           </a>
         </ul>
       </nav>
@@ -54,6 +58,74 @@
       <h1 class="service-header__title capitalize ff-serif text-white">
         services
       </h1>
+    </section>
+
+    <!-- service content -->
+    <section class="service-content container">
+      <!-- wedding look -->
+      <div class="service-content__wrapper">
+        <div class="service-content__img">
+          <img src="https://picsum.photos/200/300" alt="image">
+        </div>
+        <div class="service-content__content">
+          <div class="line"></div>
+          <div class="content__top">
+            <p class="content__number">01/</p>
+            <h2 class="content__title">Wedding Look</h2>
+            <p class="content__description">
+              With this package we will do a trial make up way in a advance your wedding day. Having a practice run will
+              ensure you’re happy with the look you are going to have on your wedding day.
+            </p>
+          </div>
+          <div class="content__bottom">
+            <div class="content__intro-text">
+              <p>price list</p>
+              <p>Travel fee not included</p>
+              <div class="line"></div>
+            </div>
+            <div class="content__price-list">
+              <p class="content__price-name">makeup</p>
+              <p class="content__price">$170</p>
+            </div>
+            <div class="content__price-list">
+              <p class="content__price-name">makeup</p>
+              <p class="content__price">$170</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- photoshoots -->
+      <div class="service-content__wrapper">
+        <div class="service-content__img">
+          <img src="https://picsum.photos/200/300" alt="image">
+        </div>
+        <div class="service-content__content">
+          <div class="line"></div>
+          <div class="content__top">
+            <p class="content__number">02/</p>
+            <h2 class="content__title">Photoshoots</h2>
+            <p class="content__description">
+              We prep you for any type of photoshoot: family, maternity, professional, lifestyle, engagement and more.
+              Feel confident and beautiful with the look personalized for you!
+            </p>
+          </div>
+          <div class="content__bottom">
+            <div class="content__intro-text">
+              <p>price list</p>
+              <p>Travel fee not included</p>
+              <div class="line"></div>
+            </div>
+            <div class="content__price-list">
+              <p class="content__price-name">makeup</p>
+              <p class="content__price">$170</p>
+            </div>
+            <div class="content__price-list">
+              <p class="content__price-name">makeup</p>
+              <p class="content__price">$170</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- testimonial -->
@@ -148,17 +220,18 @@
           </div>
         </div>
       </div>
+    </section>
   </main>
 
-  <footer>
-    <div class="container">
+  <footer id="contact">
+    <div class="container" style="text-align: center;">
       <div class="img-container">
         <img src="../images/logo/jessie-logo.svg" alt="jessie-logo">
       </div>
       <div class="line margin" style="--height: 1px;"></div>
-      <h3 class="fs-500">Contact Me</h3>
-      <p>I'll get back to you within 24 hours.</p>
-      <div class="flex social-medias" style="--gap: 1.5rem; padding-block: 1rem;">
+      <h3 class="fs-500 ff-serif">Contact Me</h3>
+      <p class="fs-300">I'll get back to you within 24 hours.</p>
+      <div class="flex social-medias" style="--gap: 2rem; padding-block: 1.5rem; justify-content: center;">
         <div class="flex-item">
           <img id="whatsapp" src="../images/svg/icons8-whatsapp.svg" alt="whatsapp">
         </div>
