--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Makeup Artist in Melaka area</title>
+  <title>🌟Professional Makeup Artist in Melaka area</title>
   <link rel="stylesheet" href="../style.css">
 
 </head>
@@ -28,6 +28,9 @@
           </a>
           <a href="./portfolio_page.html">
             <li>portfolio</li>
+          </a>
+          <a href="#contact">
+            <li>contact</li>
           </a>
         </ul>
       </nav>
@@ -310,15 +313,15 @@
 
   </main>
 
-  <footer>
-    <div class="container">
+  <footer id="contact">
+    <div class="container" style="text-align: center;">
       <div class="img-container">
         <img src="../images/logo/jessie-logo.svg" alt="jessie-logo">
       </div>
       <div class="line margin" style="--height: 1px;"></div>
-      <h3 class="fs-500">Contact Me</h3>
-      <p>I'll get back to you within 24 hours.</p>
-      <div class="flex social-medias" style="--gap: 1.5rem; padding-block: 1rem;">
+      <h3 class="fs-500 ff-serif">Contact Me</h3>
+      <p class="fs-300">I'll get back to you within 24 hours.</p>
+      <div class="flex social-medias" style="--gap: 2rem; padding-block: 1.5rem; justify-content: center;">
         <div class="flex-item">
           <img id="whatsapp" src="../images/svg/icons8-whatsapp.svg" alt="whatsapp">
         </div>
