--- a/html/portfolio_page.html
+++ b/html/portfolio_page.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Makeup Artist in Melaka area</title>
+  <title>🌟See Jessie's makeup and hairstyles for wedding</title>
   <link rel="stylesheet" href="../style.css">
-
+  <script src="../js/portfolio_page.js" defer></script>
 </head>
 
 <body>
@@ -29,6 +29,9 @@
           <a href="./portfolio_page.html">
             <li>portfolio</li>
           </a>
+          <a href="#contact">
+            <li>contact</li>
+          </a>
         </ul>
       </nav>
     </div>
@@ -47,7 +50,7 @@
   </header>
 
 
-  <main class="main-wrapper flow" style="--flow-space: 3rem;">
+  <main class="main-wrapper flow" style="--flow-space: 7.5rem;">
     <!-- header 1 -->
     <section class="stacked portfolio-header portfolio-header__bg">
       <h1 class="portfolio-header__title capitalize ff-serif text-white">
@@ -56,50 +59,14 @@
     </section>
 
     <!-- gallery -->
-    <section class="portfolio-gallery container">
-      <ul role="list" class="flex tab-list uppercase fs-300">
+    <section class="portfolio-gallery">
+      <ul role="list" class="container flex tab-list uppercase fs-300">
         <li class="fs-400 selected">All</li>
         <li class="fs-400">Wedding</li>
         <li class="fs-400">Lifestyle</li>
       </ul>
 
-      <div class="portfolio-gallery__grid">
-        <div class="content flow">
-          <img src="https://picsum.photos/200/400" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
-        <div class="content flow">
-          <img src="https://picsum.photos/200/300" alt="photo">
-        </div>
+      <div class="portfolio-gallery__grid" style="margin-inline: 1rem;">
       </div>
 
     </section>
@@ -134,7 +101,11 @@
     </section>
 
     <!-- media playing here -->
-    
+    <section class="video container">
+      <video width="100%" height="100%" autoplay loop muted>
+        <source src="../images/video/short2.mp4" type="video/mp4" />
+      </video>
+    </section>
 
     <!-- Instagram -->
     <section class="section-home-instagram">
@@ -177,15 +148,15 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container">
+  <footer id="contact">
+    <div class="container" style="text-align: center;">
       <div class="img-container">
         <img src="../images/logo/jessie-logo.svg" alt="jessie-logo">
       </div>
       <div class="line margin" style="--height: 1px;"></div>
-      <h3 class="fs-500">Contact Me</h3>
-      <p>I'll get back to you within 24 hours.</p>
-      <div class="flex social-medias" style="--gap: 1.5rem; padding-block: 1rem;">
+      <h3 class="fs-500 ff-serif">Contact Me</h3>
+      <p class="fs-300">I'll get back to you within 24 hours.</p>
+      <div class="flex social-medias" style="--gap: 2rem; padding-block: 1.5rem; justify-content: center;">
         <div class="flex-item">
           <img id="whatsapp" src="../images/svg/icons8-whatsapp.svg" alt="whatsapp">
         </div>
