finish the structure for services content

--- a/html/services_page.html
+++ b/html/services_page.html
@@ -61,68 +61,107 @@
     </section>
 
     <!-- service content -->
-    <section class="service-content container">
+    <section class="service-content container flow" style="--flow-space: 6rem;">
       <!-- wedding look -->
       <div class="service-content__wrapper">
-        <div class="service-content__img">
-          <img src="https://picsum.photos/200/300" alt="image">
+        <div class="service-content__img margin-bottom">
+          <img src="https://picsum.photos/200/300" alt="services-wedding-look">
         </div>
         <div class="service-content__content">
           <div class="line"></div>
-          <div class="content__top">
-            <p class="content__number">01/</p>
-            <h2 class="content__title">Wedding Look</h2>
-            <p class="content__description">
-              With this package we will do a trial make up way in a advance your wedding day. Having a practice run will
-              ensure you’re happy with the look you are going to have on your wedding day.
-            </p>
-          </div>
-          <div class="content__bottom">
-            <div class="content__intro-text">
-              <p>price list</p>
-              <p>Travel fee not included</p>
+          <div class="wrapper flow" style="--flow-space: 2rem;">
+            <div class="content__top">
+              <p class="content__number margin-top">01/</p>
+              <h2 class="content__title  fs-700 capitalize ff-serif">Wedding Look</h2>
+              <p class="content__description margin-top margin-bottom" style="--bottom-space: 2.25em;">
+                With this package we will do a trial make up way in a advance your wedding day. Having a practice run
+                will
+                ensure you’re happy with the look you are going to have on your wedding day.
+              </p>
+            </div>
+            <div class="content__bottom flow" style="--flow-space: .5rem;">
+              <div class="content__intro-text flex flex-sb">
+                <p class="uppercase">price list</p>
+                <p class="fs-200">Travel fee not included</p>
+              </div>
               <div class="line"></div>
+              <div class="content__price-list flex flex-sb">
+                <p class="content__price-name">makeup</p>
+                <p class="content__price">$170</p>
+              </div>
+              <div class="content__price-list flex flex-sb">
+                <p class="content__price-name">makeup</p>
+                <p class="content__price">$170</p>
+              </div>
             </div>
-            <div class="content__price-list">
-              <p class="content__price-name">makeup</p>
-              <p class="content__price">$170</p>
-            </div>
-            <div class="content__price-list">
-              <p class="content__price-name">makeup</p>
-              <p class="content__price">$170</p>
-            </div>
+            <button class="button">schedule consultation</button>
           </div>
         </div>
       </div>
-      <!-- photoshoots -->
+      <!-- wedding look -->
       <div class="service-content__wrapper">
-        <div class="service-content__img">
-          <img src="https://picsum.photos/200/300" alt="image">
+        <div class="service-content__img margin-bottom">
+          <img src="https://picsum.photos/200/300" alt="services-wedding-look">
         </div>
         <div class="service-content__content">
           <div class="line"></div>
-          <div class="content__top">
-            <p class="content__number">02/</p>
-            <h2 class="content__title">Photoshoots</h2>
-            <p class="content__description">
-              We prep you for any type of photoshoot: family, maternity, professional, lifestyle, engagement and more.
-              Feel confident and beautiful with the look personalized for you!
-            </p>
-          </div>
-          <div class="content__bottom">
-            <div class="content__intro-text">
-              <p>price list</p>
-              <p>Travel fee not included</p>
+          <div class="wrapper flow" style="--flow-space: 2rem;">
+            <div class="content__top">
+              <p class="content__number margin-top">01/</p>
+              <h2 class="content__title  fs-700 capitalize ff-serif">Wedding Look</h2>
+              <p class="content__description margin-top margin-bottom" style="--bottom-space: 2.25em;">
+                With this package we will do a trial make up way in a advance your wedding day. Having a practice run
+                will
+                ensure you’re happy with the look you are going to have on your wedding day.
+              </p>
+            </div>
+            <div class="content__bottom flow" style="--flow-space: .5rem;">
+              <div class="content__intro-text flex flex-sb">
+                <p class="uppercase">price list</p>
+                <p class="fs-200">Travel fee not included</p>
+              </div>
               <div class="line"></div>
+              <div class="content__price-list flex flex-sb">
+                <p class="content__price-name">makeup</p>
+                <p class="content__price">$170</p>
+              </div>
+              <div class="content__price-list flex flex-sb">
+                <p class="content__price-name">makeup</p>
+                <p class="content__price">$170</p>
+              </div>
             </div>
-            <div class="content__price-list">
-              <p class="content__price-name">makeup</p>
-              <p class="content__price">$170</p>
-            </div>
-            <div class="content__price-list">
-              <p class="content__price-name">makeup</p>
-              <p class="content__price">$170</p>
-            </div>
+            <button class="button">schedule consultation</button>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- portfolio -->
+    <section class="section-home-portfolio container">
+      <div class="flex flex-column margin-bottom" style="--bottom-space: 2rem;">
+        <h2 class="ff-serif fs-600 capitalize margin-bottom" style="--bottom-space: 0.5rem;">
+          My clients
+        </h2>
+        <a href="#">
+          <button class="button pointer uppercase fs-200">See portfolio</button>
+        </a>
+      </div>
+
+      <div class="grid">
+        <div class="grid-item pointer">
+          <div class="img-container">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#">
+          </div>
+        </div>
+        <div class="grid-item pointer">
+          <div class="img-container">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#" class="special-img">
+          </div>
+        </div>
+        <div class="grid-item pointer hide">
+          <div class="img-container">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="#">
           </div>
         </div>
       </div>
