--- a/components.html
+++ b/components.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,193 @@
   <title>Components!!!</title>
   <link rel="stylesheet" href="./components.css">
 </head>
+
 <body>
-  
+  <h3>navigation bar</h3>
+  <nav class="navbar hidden">
+    <div class="container container--navbar">
+      <section class="navbar__logo">
+        <a href="#">
+          <img src="./images/logo/logoipsum-288.svg" alt="logo">
+        </a>
+      </section>
+      <ul class="navbar__list">
+        <li class="navbar__item">
+          <a href="#">Services</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#">Portfolio</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#">About Me</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <nav class="navbar navbar--mobile">
+    <div class="container container--navbar">
+      <section class="navbar__logo">
+        <a href="#">
+          <img src="./images/logo/logoipsum-288.svg" alt="logo">
+        </a>
+      </section>
+      <span class="navbar__button cursor">
+        <img src="./assets/svg/menu.svg" alt="logo">
+      </span>
+    </div>
+    <section class="menu navbar__menu hidden">
+      <div class="container container--menu">
+        <ul class="menu__items">
+          <li class="menu__item">
+            <a href="#">Services</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Portfolio</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">About Me</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </nav>
+  <h3>Buttons</h3>
+  <div class="container flow">
+    <button class="btn btn--normal">
+      CTA
+    </button>
+
+    <button class="btn btn--hover">
+      CTA
+    </button>
+
+    <button class="btn btn--icon">
+      <span>Button</span>
+      <img src="./assets/svg/arrow.svg" alt="arrow">
+    </button>
+  </div>
+
+  <h3>Tabs</h3>
+  <div class="container flow">
+    <ul class="tabs">
+      <li class="tabs__tab">
+        <a href="#">All</a>
+      </li>
+      <li class="tabs__tab">
+        <a href="#">Wedding</a>
+      </li>
+      <li class="tabs__tab">
+        <a href="#">Lifestyle</a>
+      </li>
+    </ul>
+  </div>
+
+  <h3>Sliders Arrows</h3>
+  <div class="container flow">
+    <div class="slider-control">
+      <span class="slider-control__arrow slider-control__arrow--left">
+        <img src="./assets/svg/arrow.svg" alt="previous comment">
+      </span>
+      <span class="slider-control__arrow">
+        <img src="./assets/svg/arrow.svg" alt="next comment">
+      </span>
+    </div>
+
+  </div>
+
+  <h3>Social Medias</h3>
+  <div class="container flow">
+    <section class="socials">
+      <a href="#" class="socials__link instagram">
+        <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M10.946 5.33081C7.84058 5.33081 5.33569 7.83569 5.33569 10.9412C5.33569 14.0466 7.84058 16.5515 10.946 16.5515C14.0515 16.5515 16.5564 14.0466 16.5564 10.9412C16.5564 7.83569 14.0515 5.33081 10.946 5.33081ZM10.946 14.5886C8.93921 14.5886 7.29858 12.9529 7.29858 10.9412C7.29858 8.92944 8.93433 7.2937 10.946 7.2937C12.9578 7.2937 14.5935 8.92944 14.5935 10.9412C14.5935 12.9529 12.9529 14.5886 10.946 14.5886ZM18.0945 5.10132C18.0945 5.82886 17.5085 6.40991 16.7859 6.40991C16.0584 6.40991 15.4773 5.82397 15.4773 5.10132C15.4773 4.37866 16.0632 3.79272 16.7859 3.79272C17.5085 3.79272 18.0945 4.37866 18.0945 5.10132ZM21.8103 6.42944C21.7273 4.67651 21.3269 3.12378 20.0427 1.84448C18.7634 0.565185 17.2107 0.164795 15.4578 0.0769043C13.6511 -0.0256348 8.23608 -0.0256348 6.42944 0.0769043C4.6814 0.159912 3.12866 0.560303 1.84448 1.8396C0.560303 3.1189 0.164795 4.67163 0.0769043 6.42456C-0.0256348 8.2312 -0.0256348 13.6462 0.0769043 15.4529C0.159912 17.2058 0.560303 18.7585 1.84448 20.0378C3.12866 21.3171 4.67651 21.7175 6.42944 21.8054C8.23608 21.908 13.6511 21.908 15.4578 21.8054C17.2107 21.7224 18.7634 21.322 20.0427 20.0378C21.322 18.7585 21.7224 17.2058 21.8103 15.4529C21.9128 13.6462 21.9128 8.23608 21.8103 6.42944ZM19.4763 17.3914C19.0955 18.3484 18.3582 19.0857 17.3962 19.4714C15.9558 20.0427 12.5378 19.9109 10.946 19.9109C9.35425 19.9109 5.9314 20.0378 4.49585 19.4714C3.53882 19.0906 2.80151 18.3533 2.41577 17.3914C1.84448 15.9509 1.97632 12.533 1.97632 10.9412C1.97632 9.34937 1.84937 5.92651 2.41577 4.49097C2.79663 3.53394 3.53394 2.79663 4.49585 2.41089C5.93628 1.8396 9.35425 1.97144 10.946 1.97144C12.5378 1.97144 15.9607 1.84448 17.3962 2.41089C18.3533 2.79175 19.0906 3.52905 19.4763 4.49097C20.0476 5.9314 19.9158 9.34937 19.9158 10.9412C19.9158 12.533 20.0476 15.9558 19.4763 17.3914Z"
+            fill="white" />
+        </svg>
+      </a>
+      <a href="#" class="socials__link messenger">
+        <svg width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M12.1362 0C5.29883 0 0 4.99707 0 11.7466C0 15.2769 1.45068 18.3276 3.81201 20.4351C4.21973 20.8018 4.13574 21.0142 4.20508 23.2783C4.21054 23.4369 4.25472 23.5918 4.33376 23.7294C4.41281 23.867 4.52433 23.9831 4.65858 24.0677C4.79283 24.1523 4.94574 24.2028 5.10398 24.2148C5.26222 24.2267 5.42098 24.1997 5.56641 24.1362C8.1499 22.9985 8.18311 22.9087 8.62109 23.0278C16.106 25.0879 24.2188 20.2979 24.2188 11.7466C24.2188 4.99707 18.9741 0 12.1362 0ZM19.4233 9.03955L15.8589 14.6826C15.7243 14.8948 15.5473 15.0769 15.339 15.2175C15.1308 15.3581 14.8957 15.4542 14.6486 15.4997C14.4014 15.5452 14.1476 15.5392 13.9029 15.4821C13.6582 15.4249 13.4279 15.3178 13.2266 15.1675L10.3906 13.0449C10.2638 12.9498 10.1096 12.8984 9.95117 12.8984C9.7927 12.8984 9.6385 12.9498 9.51172 13.0449L5.68506 15.9473C5.17432 16.3345 4.50537 15.7227 4.84961 15.1821L8.41406 9.53906C8.54862 9.32681 8.72557 9.14465 8.93384 9.004C9.1421 8.86335 9.37718 8.76725 9.62433 8.72173C9.87148 8.6762 10.1254 8.68224 10.3701 8.73945C10.6148 8.79666 10.845 8.90382 11.0464 9.0542L13.8813 11.1763C14.0081 11.2714 14.1623 11.3228 14.3208 11.3228C14.4793 11.3228 14.6335 11.2714 14.7603 11.1763L18.5889 8.27686C19.0986 7.88721 19.7676 8.49854 19.4233 9.03955Z"
+            fill="white" />
+        </svg>
+      </a>
+
+      <a href="#" class="socials__link whatsapp">
+        <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M18.5986 3.17871C16.5527 1.12793 13.8281 0 10.9326 0C4.95605 0 0.0927734 4.86328 0.0927734 10.8398C0.0927734 12.749 0.59082 14.6143 1.53809 16.2598L0 21.875L5.74707 20.3662C7.3291 21.2305 9.11133 21.6846 10.9277 21.6846H10.9326C16.9043 21.6846 21.875 16.8213 21.875 10.8447C21.875 7.94922 20.6445 5.22949 18.5986 3.17871ZM10.9326 19.8584C9.31152 19.8584 7.72461 19.4238 6.34277 18.6035L6.01562 18.4082L2.60742 19.3018L3.51562 15.9766L3.30078 15.6348C2.39746 14.1992 1.92383 12.5439 1.92383 10.8398C1.92383 5.87402 5.9668 1.83105 10.9375 1.83105C13.3447 1.83105 15.6055 2.76855 17.3047 4.47266C19.0039 6.17676 20.0488 8.4375 20.0439 10.8447C20.0439 15.8154 15.8984 19.8584 10.9326 19.8584ZM15.874 13.1104C15.6055 12.9736 14.2725 12.3193 14.0234 12.2314C13.7744 12.1387 13.5938 12.0947 13.4131 12.3682C13.2324 12.6416 12.7148 13.2471 12.5537 13.4326C12.3975 13.6133 12.2363 13.6377 11.9678 13.501C10.376 12.7051 9.33105 12.0801 8.28125 10.2783C8.00293 9.7998 8.55957 9.83398 9.07715 8.79883C9.16504 8.61816 9.12109 8.46191 9.05273 8.3252C8.98438 8.18848 8.44238 6.85547 8.21777 6.31348C7.99805 5.78613 7.77344 5.85938 7.60742 5.84961C7.45117 5.83984 7.27051 5.83984 7.08984 5.83984C6.90918 5.83984 6.61621 5.9082 6.36719 6.17676C6.11816 6.4502 5.41992 7.10449 5.41992 8.4375C5.41992 9.77051 6.3916 11.0596 6.52344 11.2402C6.66016 11.4209 8.43262 14.1553 11.1523 15.332C12.8711 16.0742 13.5449 16.1377 14.4043 16.0107C14.9268 15.9326 16.0059 15.3564 16.2305 14.7217C16.4551 14.0869 16.4551 13.5449 16.3867 13.4326C16.3232 13.3105 16.1426 13.2422 15.874 13.1104Z"
+            fill="white" />
+        </svg>
+      </a>
+    </section>
+  </div>
+
+  <h3>Accordian</h3>
+  <div class="container flow">
+    <ul class="faq">
+      <li class="faq__item" data-number="1">
+        <div class="faq__question" aria-expanded="true">
+          <div class="faq__container">
+            <div class="faq__wrapper">
+              <!-- <div class="faq__number">01</div> -->
+              <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
+              </div>
+            </div>
+            <div class="faq__icon">
+              <img src="./assets/svg/add.svg" alt="expand">
+            </div>
+          </div>
+          <div class="faq__answer">
+            <p>Hello world</p>
+          </div>
+        </div>
+      </li>
+      <li class="faq__item" data-number="1">
+        <div class="faq__question" aria-expanded="true">
+          <div class="faq__container">
+            <div class="faq__wrapper">
+              <!-- <div class="faq__number">01</div> -->
+              <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
+              </div>
+            </div>
+            <div class="faq__icon">
+              <img src="./assets/svg/add.svg" alt="expand">
+            </div>
+          </div>
+          <div class="faq__answer">
+            <p>Hello world</p>
+          </div>
+        </div>
+      </li>
+      <li class="faq__item" data-number="1">
+        <div class="faq__question" aria-expanded="true">
+          <div class="faq__container">
+            <div class="faq__wrapper">
+              <!-- <div class="faq__number">01</div> -->
+              <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
+              </div>
+            </div>
+            <div class="faq__icon">
+              <img src="./assets/svg/add.svg" alt="expand">
+            </div>
+          </div>
+          <div class="faq__answer">
+            <p>Hello world</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+  <h3>Accordian</h3>
+  <h3>Accordian</h3>
+  <h3>Accordian</h3>
+  <h3>Accordian</h3>
+  <h3>Accordian</h3>
+
 </body>
+
 </html>
