ADD | navbar transition effect + autohide

--- a/components.html
+++ b/components.html
@@ -11,42 +11,40 @@
 
 <body>
   <h3>navigation bar</h3>
-  <nav class="navbar hidden">
-    <div class="container container--navbar">
-      <section class="navbar__logo">
-        <a href="#">
-          <img src="./images/logo/logoipsum-288.svg" alt="logo">
-        </a>
-      </section>
-      <ul class="navbar__list">
-        <li class="navbar__item">
-          <a href="#">Services</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#">Portfolio</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#">About Me</a>
-        </li>
-
-      </ul>
-    </div>
-  </nav>
-
-  <nav class="navbar navbar--mobile">
-    <div class="container container--navbar">
-      <section class="navbar__logo">
-        <a href="#">
-          <img src="./images/logo/logoipsum-288.svg" alt="logo">
-        </a>
-      </section>
-      <span class="navbar__button cursor">
-        <img src="./assets/svg/menu.svg" alt="logo">
-      </span>
-    </div>
-    <section class="menu navbar__menu hidden">
-      <div class="container container--menu">
-        <ul class="menu__items">
+  <header>
+    <nav class="navbar hidden">
+      <div class="container container--navbar">
+        <section class="navbar__logo">
+          <a href="#">
+            <img src="./images/logo/logoipsum-288.svg" alt="logo">
+          </a>
+        </section>
+        <ul class="navbar__list">
+          <li class="navbar__item">
+            <a href="#">Services</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#">Portfolio</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#">About Me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <nav class="navbar navbar--mobile">
+      <div class="container container--navbar">
+        <section class="navbar__logo">
+          <a href="#">
+            <img src="./images/logo/logoipsum-288.svg" alt="logo">
+          </a>
+        </section>
+        <span class="navbar__button cursor">
+          <img src="./assets/svg/menu.svg" alt="logo">
+        </span>
+      </div>
+      <ul class="container menu">
+        <div class="menu__container">
           <li class="menu__item">
             <a href="#">Services</a>
           </li>
@@ -56,10 +54,10 @@
           <li class="menu__item">
             <a href="#">About Me</a>
           </li>
-        </ul>
-      </div>
-    </section>
-  </nav>
+        </div>
+      </ul>
+    </nav>
+  </header>
   <h3>Buttons</h3>
   <div class="container flow">
     <button class="btn btn--normal">
