ADD | Homepage Mobile Layout

--- a/components.html
+++ b/components.html
@@ -103,7 +103,7 @@
   </div>
 
   <h3>Social Medias</h3>
-  <div class="container flow">
+  <footer class="container flow">
     <section class="socials">
       <a href="#" class="socials__link instagram">
         <img src="./assets/svg/instagram.svg" alt="Connect with me on Instagram">
@@ -116,7 +116,7 @@
         <img src="./assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
       </a>
     </section>
-  </div>
+  </footer>
 
   <h3>Accordian</h3>
   <div class="container flow">
